--- a/.github/workflows/wonderful_editor.yml
+++ b/.github/workflows/wonderful_editor.yml
@@ -23,7 +23,7 @@ jobs:
       - name: Cache gems
         uses: actions/cache@v1
         with:
-          path: vendor/bundle
+          # path: vendor/bundle
           key: ${{ runner.os }}-gem-${{ hashFiles('**/Gemfile.lock') }}
           restore-keys: |
             ${{ runner.os }}-gem-
