--- a/.github/workflows/wonderful_editor.yml
+++ b/.github/workflows/wonderful_editor.yml
@@ -15,7 +15,7 @@ jobs:
       - name: Git checkout
         uses: actions/checkout@v2
       - name: Setup Ruby 2.7.2
-        uses: actions/setup-ruby@v1
+        uses: ruby/setup-ruby@v1
         with:
           ruby-version: 2.7.2
       - name: Setup bundler
@@ -23,13 +23,12 @@ jobs:
       - name: Cache gems
         uses: actions/cache@v1
         with:
-         path: vendor/bundle
+          path: vendor/bundle
           key: ${{ runner.os }}-gem-${{ hashFiles('**/Gemfile.lock') }}
           restore-keys: |
             ${{ runner.os }}-gem-
       - name: Install gems
-        run:
-          bundle install --path vendor/bundle --jobs 4
+        run: bundle install --path vendor/bundle --jobs 4
       - name: Setup Database
         run: |
           cp -v config/database.yml.ci config/database.yml
@@ -43,4 +42,3 @@ jobs:
         run: bundle exec rubocop --parallel
       - name: RSpec
         run: bundle exec rspec
-
