device_token_auth新規登録

--- a/config/rubocop/rspec.yml
+++ b/config/rubocop/rspec.yml
@@ -72,4 +72,6 @@ RSpec/NestedGroups:
 RSpec/ReturnFromStub:
   Enabled: false
 
-  
+  # context ごとに let! を使い分けたい場合があるため無効に
+RSpec/LetSetup:
+  Enabled: false
